--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,24 +9,23 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]  
-        java: [8, 11, 17] 
-        exclude:
-          - os: windows-latest
-            java: 8
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        java: [17] 
 
     steps:
+    # --- Get the latest code ---
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
+    # --- Setup Java ---
     - name: Set up JDK ${{ matrix.java }}
       uses: actions/setup-java@v4
       with:
         java-version: ${{ matrix.java }}
         distribution: 'temurin'
-      id: java-cache
 
+    # --- Prepare folders ---
     - name: Prepare directories
       run: |
         mkdir -p bin
@@ -34,6 +33,7 @@ jobs:
         echo "Project structure:"
         ls -R src tests *-randoop || echo "Some directories may not exist yet"
 
+    # --- Compile main code ---
     - name: Compile main code
       run: |
         find src -name "*.java" > sources.txt || echo "No Java files found in src/"
@@ -43,6 +43,7 @@ jobs:
           echo "::warning::No main Java files to compile"
         fi
 
+    # --- Compile tests ---
     - name: Compile tests (OS-aware)
       shell: bash
       run: |
@@ -54,37 +55,49 @@ jobs:
           FIND_CMD="find . -name '*.java'"
         fi
 
+        # Compile manual tests
         echo "Looking for manual tests..."
         $FIND_CMD | grep -e "^tests/" > manual_tests.txt || true
         if [ -s manual_tests.txt ]; then
-          javac -d bin-tests -encoding UTF-8 -cp "bin${CP_SEP}lib/junit-platform-console-standalone-1.12.0.jar" @manual_tests.txt
+          javac -d bin-tests -encoding UTF-8 -cp "bin${CP_SEP}lib/junit.jar" @manual_tests.txt
         else
           echo "::notice::No manual tests found in tests/"
         fi
 
+        # Compile Randoop tests
         echo "Looking for Randoop tests..."
         $FIND_CMD | grep -e "-randoop/" > randoop_tests.txt || true
         if [ -s randoop_tests.txt ]; then
-          javac -d bin-tests -encoding UTF-8 -cp "bin${CP_SEP}lib/junit-platform-console-standalone-1.12.0.jar" @randoop_tests.txt
+          javac -d bin-tests -encoding UTF-8 -cp "bin${CP_SEP}lib/junit.jar" @randoop_tests.txt
         else
           echo "::notice::No Randoop tests found in *-randoop/"
         fi
 
-    - name: Run tests (JUnit 5)
+    # --- Run tests ---
+    - name: Run tests
       shell: bash
       run: |
         if [ "$RUNNER_OS" == "Windows" ]; then
           CP_SEP=";"
+          FIND_CMD="dir /s /b *.class"
         else
           CP_SEP=":"
+          FIND_CMD="find bin-tests -name '*.class'"
         fi
 
-        if [ ! -f lib/junit-platform-console-standalone-1.12.0.jar ]; then
-          echo "::error::Missing required JAR: junit-platform-console-standalone-1.12.0.jar"
+        echo "Discovering test classes..."
+        TEST_CLASSES=$($FIND_CMD | grep -v '\$' | sed 's/\.class$//' | tr '/' '.' | sed 's/bin-tests.//')
+        
+        if [ -z "$TEST_CLASSES" ]; then
+          echo "::error::No test classes found in bin-tests/"
+          echo "Check that:"
+          echo "1. Test files end with 'Test.java'"
+          echo "2. Files are in tests/ or *-randoop/ folders"
           exit 1
         fi
 
-        echo "=== Running JUnit 5 tests ==="
-        java -jar lib/junit-platform-console-standalone-1.12.0.jar \
-          --class-path "bin${CP_SEP}bin-tests" \
-          --scan-class-path || echo "::warning::Some tests failed"
+        echo "=== Running these test classes ==="
+        echo "$TEST_CLASSES" | tr ' ' '\n'
+        echo "================================"
+        
+        java -cp "bin${CP_SEP}bin-tests${CP_SEP}lib/junit.jar" org.junit.runner.JUnitCore $TEST_CLASSES || echo "::warning::Some tests failed"
