--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Java CI with JUnit
 
 on:
   pull_request:
-    branches: [master]
+    branches: [main]
   workflow_dispatch: # Allows manual triggering
 
 jobs:
