--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,9 @@ jobs:
             tests/bookingMoviesTesting/testBookingDL.java \
             tests/bookingMoviesTesting/testBookingBL.java \
             tests/bookingMoviesTesting/testBookingPL.java \
+            tests/browseMoviesTesting/testBrowsingDL.java \
+            tests/browseMoviesTesting/testBrowsingBL.java \
+            tests/browseMoviesTesting/testBrowsingPL.java \
             tests/checkoutTesting/testCheckoutDL.java \
             tests/checkoutTesting/testCheckoutBL.java \
             tests/checkoutTesting/testCheckoutPL.java \
@@ -46,6 +49,9 @@ jobs:
             tests.bookingMoviesTesting.testBookingDL \
             tests.bookingMoviesTesting.testBookingBL \
             tests.bookingMoviesTesting.testBookingPL \
+            tests.browseMoviesTesting.testBrowsingDL \
+            tests.browseMoviesTesting.testBrowsingBL \
+            tests.browseMoviesTesting.testBrowsingPL \
             tests.checkoutTesting.testCheckoutDL \
             tests.checkoutTesting.testCheckoutBL \
             tests.checkoutTesting.testCheckoutPL \
